--- a/pot_ordering.ipynb
+++ b/pot_ordering.ipynb
@@ -2,104 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pot_correction import *"
+    "from pot_correction import *\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "DNA_LENGTH = 150           \n",
-    "READ_lENGTH = 15 \n",
+    "READ_lENGTH = 20 \n",
     "READ_COUNT = 400       \n",
-    "POT_COUNT = 10\n",
+    "POT_COUNT = 8\n",
     "POT_CHECKING_COUNT = 5 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "dna = generate_dna(DNA_LENGTH)\n",
-    "reads = [generate_read(dna, READ_lENGTH, lambda base: gauss_unsharp_uncertainty_generator(base, 0.5)) for _ in range(READ_COUNT)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0.0077897619918682135, 0.1361224832738544, 0.8560877547342775, 0.0],\n",
-       " [0.0155206726678557,\n",
-       "  0.08218276168197793,\n",
-       "  0.6941114477127691,\n",
-       "  0.2081851179373972],\n",
-       " [0.2996400329546324, 0.0, 0.09070606838090707, 0.6096538986644605],\n",
-       " [0.0, 1.0, 0.0, 0.0],\n",
-       " [0.33940859224515246,\n",
-       "  0.3332961228869633,\n",
-       "  0.15317009707167764,\n",
-       "  0.1741251877962065],\n",
-       " [0.0, 0.4807345982865164, 0.11591250155543689, 0.40335290015804687],\n",
-       " [0.7520333038233314, 0.0, 0.2479666961766686, 0.0],\n",
-       " [0.0, 0.7517822821872391, 0.23548498854548636, 0.012732729267274477],\n",
-       " [0.598285473302553, 0.0, 0.40171452669744706, 0.0],\n",
-       " [0.2743664541448536, 0.7256335458551464, 0.0, 0.0],\n",
-       " [1.0, 0.0, 0.0, 0.0],\n",
-       " [0.2748963112438719, 0.42694377557666713, 0.0, 0.29815991317946083],\n",
-       " [0.0, 1.0, 0.0, 0.0],\n",
-       " [0.6183721772124712, 0.09284831494590912, 0.2887795078416197, 0.0],\n",
-       " [0.0, 0.159692889541305, 0.0, 0.840307110458695]]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reads[0].uncertain_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9028333333333365"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "similarities = [string_similarity(most_likely_restorer(r), r.original_text) for r in reads]\n",
-    "sum(similarities) / len(similarities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pots = get_pots(POT_COUNT, reads)"
+    "reads = [generate_read(dna, READ_lENGTH, lambda base: gauss_unsharp_uncertainty_generator(base, 0.47)) for _ in range(READ_COUNT)]\n",
+    "# 0.47"
    ]
   },
   {
@@ -108,12 +40,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pot_iteration(pots, reads, pot_sample_size=POT_CHECKING_COUNT)"
+    "#reads[0].uncertain_text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.75, 0.95, 0.75, 0.75, 0.95, 0.95, 0.7, 0.9, 0.9, 0.9, 0.9, 0.85, 0.85, 0.8, 0.95, 0.8, 0.7, 0.85, 0.8, 0.85, 0.85, 0.85, 0.7, 0.95, 0.85, 0.9, 0.95, 0.9, 0.9, 0.75, 0.75, 0.85, 0.85, 0.85, 0.8, 0.85, 0.9, 0.8, 0.9, 0.8, 0.8, 0.8, 0.95, 0.7, 0.9, 0.9, 0.85, 0.8, 0.85, 0.85, 0.85, 0.85, 0.85, 0.85, 0.9, 0.8, 0.65, 0.95, 0.85, 0.85, 0.85, 0.8, 0.85, 0.8, 0.8, 0.8, 0.75, 0.8, 0.9, 0.9, 1.0, 0.95, 0.8, 0.8, 0.8, 0.85, 0.8, 0.9, 0.8, 0.75, 0.8, 0.9, 0.8, 0.75, 0.9, 0.75, 0.85, 0.85, 0.8, 0.85, 0.85, 0.95, 0.8, 0.85, 0.7, 0.9, 0.85, 0.85, 0.95, 0.75, 0.8, 0.75, 0.9, 0.8, 0.8, 0.95, 0.95, 0.75, 0.85, 0.85, 0.8, 0.9, 0.75, 0.8, 0.9, 0.95, 0.85, 0.75, 0.85, 0.9, 0.7, 0.75, 0.6, 0.9, 0.85, 0.85, 1.0, 0.9, 0.85, 0.8, 0.7, 0.85, 0.9, 0.8, 0.8, 0.75, 0.65, 0.9, 0.85, 0.85, 0.95, 0.85, 0.85, 0.75, 0.8, 0.9, 0.8, 0.8, 0.9, 0.9, 0.9, 0.95, 0.85, 0.8, 0.75, 0.8, 0.9, 0.85, 0.95, 0.8, 0.95, 0.9, 0.95, 0.8, 0.75, 0.85, 0.9, 0.8, 0.75, 0.8, 0.9, 0.85, 0.85, 0.95, 0.85, 0.8, 0.8, 0.95, 0.9, 0.75, 0.8, 0.8, 0.95, 0.65, 0.85, 0.85, 0.85, 0.75, 0.9, 0.85, 0.9, 0.8, 0.8, 0.8, 0.8, 0.9, 0.7, 0.9, 0.85, 0.8, 0.85, 0.85, 0.8, 0.85, 0.75, 0.8, 0.8, 0.95, 0.9, 0.75, 0.9, 0.75, 0.8, 0.95, 0.8, 0.75, 0.9, 0.8, 0.95, 0.8, 0.8, 1.0, 0.9, 0.85, 0.9, 0.85, 0.85, 0.75, 0.7, 0.95, 0.85, 0.9, 0.9, 1.0, 0.85, 0.8, 0.75, 0.9, 0.8, 0.8, 0.85, 0.85, 0.85, 0.75, 0.8, 0.9, 0.8, 0.95, 0.8, 0.75, 0.8, 0.9, 0.95, 0.85, 0.9, 0.75, 0.8, 0.75, 0.8, 0.9, 0.85, 0.8, 0.65, 0.8, 0.85, 0.95, 0.75, 0.85, 0.9, 0.9, 0.85, 0.7, 0.9, 0.85, 0.9, 0.85, 0.8, 0.85, 0.85, 0.95, 0.75, 0.85, 0.75, 1.0, 0.75, 0.8, 0.75, 0.9, 1.0, 1.0, 0.85, 0.9, 0.9, 0.85, 0.75, 0.8, 0.7, 0.8, 0.95, 0.85, 0.85, 0.95, 0.9, 0.8, 0.9, 0.9, 0.7, 0.8, 0.85, 0.75, 0.7, 0.8, 0.85, 0.9, 0.9, 0.95, 1.0, 0.9, 0.85, 0.85, 0.85, 0.85, 0.9, 0.8, 0.9, 0.7, 0.85, 0.8, 0.9, 0.85, 0.7, 0.8, 0.75, 0.9, 0.85, 0.85, 0.85, 0.9, 0.85, 0.9, 0.7, 0.85, 0.85, 0.75, 0.85, 0.95, 0.8, 0.85, 0.8, 0.95, 0.8, 0.8, 0.75, 0.9, 0.7, 0.85, 0.9, 0.8, 0.9, 0.8, 0.8, 0.8, 0.9, 0.75, 0.9, 0.85, 0.8, 1.0, 0.85, 0.75, 0.8, 0.85, 0.85, 0.95, 0.9, 0.8, 0.85, 0.85, 0.7, 0.85, 0.85, 0.85, 0.8, 0.7, 0.8, 0.8, 0.75, 0.8, 0.9, 0.8, 0.85, 0.8, 0.75, 0.85, 0.9, 0.85, 0.85, 0.9, 0.85, 0.9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.16087499999999877"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_likely_restorer_error_rate(reads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pots = get_pots(POT_COUNT, reads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,30 +90,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pot_iteration(pots, reads, pot_sample_size=POT_CHECKING_COUNT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".................................................................................................|||.||||.|||||||||||||.|.............................\n",
-      "....|..........................|.||||||||||.|.||................||................................||..|........|......................................\n",
-      "........|||||||||||................................................................................||....................||...........................\n",
-      "..................................................................|||...|.............................................||..||.|..|.||.||...............\n",
-      "............|..||||||||||||||||...............................................................|..|..|.................................................\n",
-      "|.........................................|||||.|||||.................................................................|||.||||||.||.|||...............\n",
-      "...........|....................................................................|||||||||.||.|||......................................||..............\n",
-      "||||||||..|.......|...............................|.|.||.........................................|....................................................\n",
-      "................................................................|.|||||||||||||.|.|........|.......................................|..|...............\n",
-      "................................|...................|||||||||||..|...........................|........................................................\n"
+      ".................|||.||||||||||||..|..................................................................................................................\n",
+      ".................|............................................................||||||||||||||||||..|...................................................\n",
+      ".................................................|...........................................................||||.|..||||||||||||||...................\n",
+      "|||||||||||||||||||||..............................|..............................................................|...................................\n",
+      ".|.......................................||...|||.|.||||||||||..|.....................................................................................\n",
+      "...............................||||||||||||||.|||..|..............................|..............................................|....................\n",
+      "...................|.........................................|.||||||||||||||.|....|..................................................................\n",
+      "........................................................................|.............|....||||||||||||||||||||||.||.......|..........................\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "for i in range(POT_COUNT):\n",
     "    histogram_like([a.start_position for a in pots[i].members], DNA_LENGTH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_pot_alignment, in_pot_score = get_in_pot_alignment(pots[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     TAAGAAAGGAAGGAGGATCG\n",
+      "                                AGAGGATGGCCACAGATTGC\n",
+      "                                  AGGATCTCTGAAAACTCCAT\n",
+      "                                 GAACATCGCTCCACATTGCA\n",
+      "                       AAATCGGAGAGAGGAGCGCT\n",
+      "                                AGAGGATCGCTACACAGTGC\n",
+      "                    TTACAATCGGAGAGATGATT\n",
+      "                         ATCGGAGAGACGGTCGCTTC\n",
+      "                         CTCGGAGAGAGGATCGCTAC\n",
+      "                               GCGAGGATCGCTACACATTA\n",
+      "                             CAGAGAGGATTGCTCCAAAT\n",
+      "                                AGAGGATCGTTACTGATTGA\n",
+      "                               GAGAGGTTCGCTACAATTTG\n",
+      "                     TAAAATCAGAGAGAGGATCA\n",
+      "                        TATCTGAGAGAGAGGGGCTA\n",
+      "                          TCGCAGAGAGGATCGCTGAA\n",
+      "                                 GAGGATCACTACACATTGCC\n",
+      "                              AGAGAGGATCGCTACACACT\n",
+      "                               GGCGGAATGGCTACACATTG\n",
+      "                                 CAGGATCGCTTTTCATTGCA\n",
+      "                            GGAGAGAGGATCGGCACACT\n",
+      "                          TCAGAGATAGGATCGCTACA\n",
+      "                                     ATCGCCACACATTGAAGTAG\n",
+      "                            CCAGAGAGGATCGCTACACA\n",
+      "                                AGATGATAGGTACACATTGC\n",
+      "                                     ATCGCTACACAGTGCGTCCG\n",
+      "                     TAACATAGGAGAGAGTATCG\n",
+      "                                ATAGTACCGCTAGACATTGC\n",
+      "                               GAGAGGATCGTTTCACGTTG\n",
+      "                             TAGAGAGGATCTCTACATCT\n",
+      "                             GAGAGAGGATCGAAACACAT\n",
+      "                                AGAGGATAGCTATACATTGC\n",
+      "                     TCAAATCGGAGGGAGGATCT\n",
+      "                       AAATCGGTGACACGATCGCT\n",
+      "                                 GAGAATTGCTACAAATTGCA\n",
+      "                   TGTAAAATCGGAGAGAGGAT\n",
+      "                           CGGAGATACGATCGCTATAC\n",
+      "                             GAGAGCGGGTTGCTACCCAT\n",
+      "                           GGGAGAGAGGATTGCCACAC\n",
+      "                       AAACAGGCGAGTGGATCGCT\n",
+      "                        AGTCAGGGAGACGATCGCTA\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_read_alignment(in_pot_alignment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('TTTAAAATCGGAGAGAGGATCGCTACACATTGCATCCG', -2)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restored_text = most_likely_pot_string(in_pot_alignment)\n",
+    "restored_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrected_reads = correct_reads_with_restored_text(in_pot_alignment, restored_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.95, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.95, 1.0, 1.0, 0.95, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.95, 1.0, 1.0, 1.0, 1.0, 1.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.00487804878048792"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_likely_restorer_error_rate(corrected_reads)"
    ]
   }
  ],
