finished all but flexible start

--- a/compare_correction.ipynb
+++ b/compare_correction.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pot_correction import *"
+    "from pot_correction import *\n",
+    "from uncertain_dp2 import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,32 +33,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_reads = [r for r in reads if r.start_position < (READ_lENGTH/2)]"
+    "local_reads = [r for r in reads if r.start_position < 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.95, 0.75, 0.75, 0.95, 0.95, 0.85, 0.8, 0.95, 0.7, 0.7, 0.9, 0.9, 0.9, 0.9, 0.9, 0.65, 0.75, 0.7, 1.0, 0.9, 0.9, 0.9, 0.8, 0.95, 0.85]\n"
+      "[0.8, 0.95, 0.85, 0.95, 0.8, 0.85, 0.95, 0.85, 0.75, 0.8, 0.75]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.15000000000000002"
+       "0.15454545454545465"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "11"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,10 +89,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "local_reads = local_reads[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<AAGCA\u001b[1;31mA\u001b[0mCAATAC\u001b[1;31mA\u001b[0m\u001b[1;31mA\u001b[0mGTA\u001b[1;31mT\u001b[0mTA>,\n",
+       " <AAAGCAGCAATAC\u001b[1;31mA\u001b[0mCGTAAT>,\n",
+       " <\u001b[1;31mG\u001b[0mAA\u001b[1;31mC\u001b[0mCAGCAATACGCGTA\u001b[1;31mT\u001b[0mT>]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_reads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[A, A, G, C, A, G, C, A, A, T, A, C, A, C, G, T, A, T, T, A]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_consent(local_reads)"
+   ]
   }
  ],
  "metadata": {
