prepared correction score testing

--- a/compare_correction.ipynb
+++ b/compare_correction.ipynb
@@ -2,63 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pot_correction import *\n",
-    "from uncertain_dp2 import *"
+    "from uncertain_dp2 import *\n",
+    "from probabilistic_MSA import *\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DNA_LENGTH = 150           \n",
-    "READ_lENGTH = 20 \n",
-    "READ_COUNT = 400  "
+    "DNA_LENGTH = 30         \n",
+    "READ_lENGTH = 20\n",
+    "READ_COUNT = 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dna = generate_dna(DNA_LENGTH)\n",
-    "reads = [generate_read(dna, READ_lENGTH, lambda base: gauss_unsharp_uncertainty_generator(base, 0.47)) for _ in range(READ_COUNT)]"
+    "reads = [generate_read(dna, READ_lENGTH, lambda base: gauss_unsharp_uncertainty_generator(base, 0.43)) for _ in range(READ_COUNT)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_reads = [r for r in reads if r.start_position < 5]"
+    "local_reads =reads # [r for r in reads if r.start_position < 5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.8, 0.95, 0.85, 0.95, 0.8, 0.85, 0.95, 0.85, 0.75, 0.8, 0.75]\n"
+      "[0.9, 0.95, 0.9, 0.85, 0.7, 0.8, 0.85, 0.9, 0.85, 0.8, 1.0, 0.95, 1.0, 0.9, 0.95, 0.95, 0.8, 0.8, 1.0, 0.85]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.15454545454545465"
+       "0.11499999999999988"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,73 +80,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(local_reads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_reads = local_reads[:3]"
+    "random.shuffle(local_reads)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#local_reads = local_reads[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <AGG\u001b[1;31mG\u001b[0mAAAGC\u001b[1;31mC\u001b[0mTCCTACTACC>\n",
+      " <CAGGTA\u001b[1;31mT\u001b[0mAGCATCCTACTAC>\n",
+      " <CAG\u001b[1;31mA\u001b[0mTAA\u001b[1;31mT\u001b[0mGCATCCTAC\u001b[1;31mG\u001b[0mAC>\n",
+      "  <A\u001b[1;31mT\u001b[0mGTAAAGCATCCTA\u001b[1;31mG\u001b[0m\u001b[1;31mC\u001b[0mAC\u001b[1;31mG\u001b[0m>\n",
+      "          <CATCCTACTACCTTCCCACG>\n",
+      "  <AGGTAA\u001b[1;31mG\u001b[0mGCATC\u001b[1;31mG\u001b[0mTACTAC\u001b[1;31mA\u001b[0m>\n",
+      "       <AAGCATCCTACTACCTTCCC>\n",
+      "  <\u001b[1;31mT\u001b[0mGGTAAAGCATCCTA\u001b[1;31mG\u001b[0mT\u001b[1;31mC\u001b[0mCC>\n",
+      "        <AGCATCCTAC\u001b[1;31mC\u001b[0mACC\u001b[1;31mA\u001b[0mTCCCA>\n",
+      "         <GCATCCTA\u001b[1;31mG\u001b[0mTAC\u001b[1;31mG\u001b[0mT\u001b[1;31mG\u001b[0mCCCAC>\n",
+      "  <AGGTAAAGC\u001b[1;31mT\u001b[0mTCCTACTACC>\n",
+      "          <CATCCTACTACCTTCCCACG>\n",
+      "       <AAGCATCC\u001b[1;31mC\u001b[0mACTACCTTCCC>\n",
+      "    <GTAAAGCA\u001b[1;31mC\u001b[0mCCTACTACCTT>\n",
+      "  <AGGTA\u001b[1;31mT\u001b[0m\u001b[1;31mT\u001b[0mGCATCC\u001b[1;31mA\u001b[0m\u001b[1;31mT\u001b[0mCTACC>\n",
+      "        <AGCATCC\u001b[1;31mG\u001b[0mACTA\u001b[1;31mA\u001b[0mC\u001b[1;31mA\u001b[0m\u001b[1;31mA\u001b[0mCCCA>\n",
+      "        <AG\u001b[1;31mG\u001b[0mAT\u001b[1;31mT\u001b[0mCTACTACCTTCCCA>\n",
+      "     <TAA\u001b[1;31mC\u001b[0mGCATCCT\u001b[1;31mG\u001b[0m\u001b[1;31mA\u001b[0mTACCTT\u001b[1;31mG\u001b[0m>\n",
+      "         <G\u001b[1;31mG\u001b[0mATCCTAC\u001b[1;31mA\u001b[0mACCTTCCCAC>\n",
+      "<TC\u001b[1;31mT\u001b[0mGGTAA\u001b[1;31mC\u001b[0m\u001b[1;31mA\u001b[0mC\u001b[1;31mG\u001b[0mTCCTA\u001b[1;31mT\u001b[0m\u001b[1;31mC\u001b[0mA>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in local_reads:\n",
+    "    print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  <AGG\u001b[1;31mG\u001b[0mAAAGC\u001b[1;31mC\u001b[0mTCCTACTACC>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = read_consent(local_reads)\n",
+    "corr = \"\".join([e for e in l])\n",
+    "print(reads[0])\n",
+    "#dp_with_probabilities(\n",
+    "#    list(map(certain_uncertainty_generator, most_likely_restorer(reads[0].uncertain_text))),\n",
+    "#    list(map(certain_uncertainty_generator, corr)),\n",
+    "#)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<AAGCA\u001b[1;31mA\u001b[0mCAATAC\u001b[1;31mA\u001b[0m\u001b[1;31mA\u001b[0mGTA\u001b[1;31mT\u001b[0mTA>,\n",
-       " <AAAGCAGCAATAC\u001b[1;31mA\u001b[0mCGTAAT>,\n",
-       " <\u001b[1;31mG\u001b[0mAA\u001b[1;31mC\u001b[0mCAGCAATACGCGTA\u001b[1;31mT\u001b[0mT>]"
+       " <C>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "local_reads"
+    "i = 2\n",
+    "ordered_reads = [local_reads[i]]+local_reads[:i]+local_reads[i+1:]\n",
+    "l = read_consent(ordered_reads, as_read=True, probabilistic=True)\n",
+    "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#corrected_reads = correct_reads_with_consens(local_reads,probabilistic=True)\n",
+    "#corrected_reads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 1.0]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[A, A, G, C, A, G, C, A, A, T, A, C, A, C, G, T, A, T, T, A]"
+       "0.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "read_consent(local_reads)"
+    "prob=True\n",
+    "i = 0\n",
+    "ordered_reads = [local_reads[i]]+local_reads[:i]+local_reads[i+1:]\n",
+    "l = read_consent(ordered_reads, as_read=True, probabilistic=prob)\n",
+    "l\n",
+    "\n",
+    "i=1\n",
+    "ordered_reads = [local_reads[i]]+local_reads[:i]+local_reads[i+1:]\n",
+    "l1 = read_consent(ordered_reads, as_read=True, probabilistic=prob)\n",
+    "l1\n",
+    "\n",
+    "most_likely_restorer_error_rate([l,l1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rounded_base_like_reads = list(map(\n",
+    "        lambda read: [RegularBase(b)for b in most_likely_restorer(read.uncertain_text)]\n",
+    "        ,local_reads))\n",
+    "graph = multiple_sequence_alignment(rounded_base_like_reads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no = graph.start_nodes[0]"
    ]
   }
  ],
