--- a/compare_correction.ipynb
+++ b/compare_correction.ipynb
@@ -181,17 +181,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[  <AGGTAAAGCATCCTACTACC>,\n",
+       "  <CAGGTAAAGCATCCTACTAC>,\n",
+       "  <CAGGTAAAGCATCCTACTAC>,\n",
+       "   <AGGTAAAGCATCCTACTACC>,\n",
+       "           <CATCCTACTACCTTCCCACG>,\n",
+       "   <AGGTAAAGCATCCTACTACC>,\n",
+       "        <AAGCATCCTACTACCTTCCC>,\n",
+       "   <\u001b[1;31mT\u001b[0mGGTAAAGCATCCTACTACC>,\n",
+       "         <AGCATCCTACTACCTTCCCA>,\n",
+       "          <GCATCCTACTACCTTCCCAC>,\n",
+       "   <AGGTAAAGCATCCTACTACC>,\n",
+       "           <CATCCTACTACCTTCCCACG>,\n",
+       "        <AAGCATCCTACTACCTTCCC>,\n",
+       "     <GTAAAGCATCCTACTACCTT>,\n",
+       "   <AGGTAAAGCATCCTACTACC>,\n",
+       "         <AGCATCCTACTACCTTCCCA>,\n",
+       "         <AGCATCCTACTACCTTCCCA>,\n",
+       "      <TAAAGCATCCTACTACCTTC>,\n",
+       "          <GCATCCTACTACCTTCCCAC>,\n",
+       " <TCAGGTAAAGCATCCTACTA>]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#corrected_reads = correct_reads_with_consens(local_reads,probabilistic=True)\n",
-    "#corrected_reads"
+    "corrected_reads = correct_reads_with_consens(local_reads,probabilistic=False)\n",
+    "corrected_reads"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +237,13 @@
        "0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prob=True\n",
+    "prob=False\n",
     "i = 0\n",
     "ordered_reads = [local_reads[i]]+local_reads[:i]+local_reads[i+1:]\n",
     "l = read_consent(ordered_reads, as_read=True, probabilistic=prob)\n",
@@ -229,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
